--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-pysqlite3-binary==0.5.0
 aiofiles==23.2.1
 aiohttp==3.8.5
 aiosignal==1.3.1
 altair==5.1.1
 annotated-types==0.5.0
+antiorm==1.2.1
 anyio==3.7.1
 async-timeout==4.0.3
 attrs==23.1.0
@@ -21,6 +21,8 @@ chromadb==0.4.13
 click==8.1.7
 coloredlogs==15.0.1
 dataclasses-json==0.6.1
+db==0.1.1
+db-sqlite3==0.0.1
 duckduckgo-search==3.8.6
 exceptiongroup==1.1.3
 fastapi==0.103.2
@@ -77,6 +79,7 @@ pydantic_core==2.10.1
 pydeck==0.8.1b0
 Pygments==2.16.1
 PyPika==0.48.9
+pysqlite3-binary==0.5.2
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 pytz==2023.3.post1
